--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
-  "author": "",
+  "author": "developer-samara-web",
   "license": "ISC",
+  "_moduleAliases": {
+    "@routes": "routes",
+    "@services": "services",
+    "@models": "models",
+    "@utils": "utils"
+  },
   "dependencies": {
-    "express": "^4.21.2"
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "module-alias": "^2.2.3",
+    "mongoose": "^8.10.1",
+    "telegraf": "^4.16.3"
   }
 }
