--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
+#METRIKA
+METRIKA_OAUTH_TOKEN=
+METRIKA_GOAL_ID=
+METRIKA_COUNTER_ID=
+
 #TELEGRAM
+TELEGRAM_ADMIN_ID=
 TELEGRAM_TOKEN=
 TELEGRAM_GROUP_ID=
 TELEGRAM_INVITE_TIME=
