add timer & fix send conversion

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 #METRIKA
+METRICA_CLIENT_ID=
+METRICA_CLIENT_SECRET=
 METRIKA_OAUTH_TOKEN=
 METRIKA_GOAL_ID=
 METRIKA_COUNTER_ID=
 
 #TELEGRAM
 TELEGRAM_ADMIN_ID=
-TELEGRAM_TOKEN=
 TELEGRAM_GROUP_ID=
+TELEGRAM_TOKEN=
 TELEGRAM_INVITE_TIME=
 
 #EXPRESS
