--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@utils": "utils"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "form-data": "^4.0.2",
+    "fs": "^0.0.1-security",
     "module-alias": "^2.2.3",
     "mongoose": "^8.10.1",
     "telegraf": "^4.16.3"
