--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,12 @@
-#REDIRECT
-REDIRECT_CLIENT_NAME=clientID
-
 #METRIKA
-METRICA_CLIENT_ID=
-METRICA_CLIENT_SECRET=
+METRIKA_CLIENT_ID=
+METRIKA_CLIENT_SECRET=
 METRIKA_OAUTH_TOKEN=
 METRIKA_GOAL_ID=
 METRIKA_COUNTER_ID=
 
 #TELEGRAM
+TELEGRAM_LOG_GROUP_ID=
 TELEGRAM_ADMIN_ID=
 TELEGRAM_GROUP_ID=
 TELEGRAM_TOKEN=
