add tikton send conversions

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ METRIKA_OAUTH_TOKEN=
 METRIKA_GOAL_ID=
 METRIKA_COUNTER_ID=
 
+#TIKTOK
+TIKTOK_PIXEL_ID=
+TIKTOK_ACCESS_TOKEN=
+
 #TELEGRAM
 TELEGRAM_LOG_GROUP_ID=
 TELEGRAM_ADMIN_ID=
