--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ METRIKA_GOAL_ID=
 METRIKA_COUNTER_ID=
 
 #TIKTOK
-TIKTOK_PIXEL_ID=
-TIKTOK_ACCESS_TOKEN=
+TIKTOK_PIXEL=
+TIKTOK_TOKEN=
 
 #TELEGRAM
 TELEGRAM_LOG_GROUP_ID=
